raised header z-index to fix about text bug

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -68,6 +68,7 @@ header {
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  z-index: 2;
 }
 
 header h1 {
